[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eshet"
version = "0.0.1"
description = "ESHET client"
requires-python = ">=3.10"
dependencies = [
    "msgpack~=1.0",
    "sentinel~=1.0",
    "yarp @ git+https://github.com/tomjnixon/yarp.git",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "asyncio-time-travel",
]
dev = [
    "black",
    "flake8",
    "flake8-black",
]

[tool.setuptools]
packages = ["eshet", "eshet.misc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "*.py"
markers = [
    "needs_server: needs a running eshet server"
]
testpaths = "eshet"
